deploy/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: glews
  labels:
    app.kubernetes.io/name: glews
    app.kubernetes.io/part-of: glews
